k8s/config/homepage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Homepage
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homepage.rafaelbroseghini.com`)
      services:
        - name: homepage
          port: 3000
  tls:
    secretName: rafaelbroseghini-cert
